fixed overflow problem

--- a/style.css
+++ b/style.css
@@ -10,19 +10,19 @@ body {
 }
 
 main {
-  width: 100%;
-  height: 100%;
- 
+  display: flex;
+  flex-wrap: wrap;
 }
 
 nav {
-  width: 100%;
+  flex-basis: 100%;
   height: 100px;
   background-color: #cac9c9;
 }
 .article-container {
   display: flex;
   flex-wrap: wrap;
+  flex-basis: 100%;
 }
 
 article {
@@ -39,69 +39,66 @@ article {
   background-color: rgb(160, 160, 160);
 }
 .article-3 {
-    background-color: rgb(209, 204, 204);
+  background-color: rgb(209, 204, 204);
 }
 
 .article-4 {
-    background-color: rgb(97, 96, 96);
+  background-color: rgb(97, 96, 96);
 }
 
 .membership {
-    width: 100%;
-    height: 633px;
-    background-image: linear-gradient(#9a9a9c,#505050);  
+  width: 100%;
+  height: 633px;
+  background-image: linear-gradient(#9a9a9c, #505050);
+  flex-basis: 100%;
 }
 
 .read-more {
-    height: 448px;
-    display: flex;
-    
+  height: 448px;
+  display: flex;
+  flex-basis: 100%;
 }
 
 .read-1 {
-    background-color: red;
-    flex-basis: 33.333%;
+  background-color: red;
+  flex-basis: 33.333%;
 }
 
 .read-2 {
-    background-color: blue;
-    flex-basis: 33.333%;
+  background-color: blue;
+  flex-basis: 33.333%;
 }
 
 .read-3 {
-    background-color: green;
-    flex-basis: 33.333%;
+  background-color: green;
+  flex-basis: 33.333%;
 }
 
 .community-container {
-    display: flex;
-    height:600px;
-    position: relative;
-    top: 190px;
+  display: flex;
+  height: 600px;
+  flex-basis: 100%;
 }
 
 .partner {
-    flex:1;
-    background-color: aliceblue;
+  flex: 1;
+  background-color: aliceblue;
 }
 .community {
-    flex: 2;
-    background-color: rgb(211, 87, 87);
+  flex: 2;
+  background-color: rgb(211, 87, 87);
 }
 
 .read-more1 {
-    height: 448px;
-    display: flex;
-    flex-wrap: wrap;
-    position: relative;
-    top: 190px;
-    
+  height: 448px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .read-4 {
-    flex: 1;
+  flex: 1;
 }
 .community1 {
-    flex: 2;
-    background-color: rgb(211, 87, 87);
+  flex: 2;
+  background-color: rgb(211, 87, 87);
 }
